--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,26 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Spencer Renfro - Software Developer Portfolio showcasing projects, skills, and experience"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="author" content="Spencer Renfro" />
+    <meta name="keywords" content="Spencer Renfro, Software Developer, Front-End Developer, React, JavaScript, Portfolio, Web Development" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://spencerrenfro.com/" />
+    <meta property="og:title" content="Spencer Renfro | Software Developer" />
+    <meta property="og:description" content="Portfolio showcasing projects, skills, and experience of Spencer Renfro, Software Developer" />
+    <meta property="og:image" content="https://i.pravatar.cc/400" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://spencerrenfro.com/" />
+    <meta property="twitter:title" content="Spencer Renfro | Software Developer" />
+    <meta property="twitter:description" content="Portfolio showcasing projects, skills, and experience of Spencer Renfro, Software Developer" />
+    <meta property="twitter:image" content="https://i.pravatar.cc/400" />
+
+    <link rel="apple-touch-icon" href="https://i.pravatar.cc/192" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Spencer Renfro | Software Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
