edits meta data

--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,16 @@
     <meta property="og:url" content="https://spencerrenfro.com/" />
     <meta property="og:title" content="Spencer Renfro | Software Developer" />
     <meta property="og:description" content="Portfolio showcasing projects, skills, and experience of Spencer Renfro, Software Developer" />
-    <meta property="og:image" content="https://i.pravatar.cc/400" />
+    <meta property="og:image" content="/images/Headshot.png"/>
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://spencerrenfro.com/" />
     <meta property="twitter:title" content="Spencer Renfro | Software Developer" />
     <meta property="twitter:description" content="Portfolio showcasing projects, skills, and experience of Spencer Renfro, Software Developer" />
-    <meta property="twitter:image" content="https://i.pravatar.cc/400" />
+    <meta property="twitter:image" content="/images/Headshot.png" />
 
-    <link rel="apple-touch-icon" href="https://i.pravatar.cc/192" />
+    <link rel="apple-touch-icon" href="/images/Headshot.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
