--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://spencerrenfro.com/" />
+    <meta property="og:url" content="https://portfolio-teal-ten-73.vercel.app/" />
     <meta property="og:title" content="Spencer Renfro | Software Developer" />
     <meta property="og:description" content="Portfolio showcasing projects, skills, and experience of Spencer Renfro, Software Developer" />
-    <meta property="og:image" content="/images/Headshot.png"/>
+    <meta property="og:image" content="https://portfolio-teal-ten-73.vercel.app/images/Headshot.png"/>
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://spencerrenfro.com/" />
+    <meta property="twitter:url" content="https://portfolio-teal-ten-73.vercel.app/" />
     <meta property="twitter:title" content="Spencer Renfro | Software Developer" />
     <meta property="twitter:description" content="Portfolio showcasing projects, skills, and experience of Spencer Renfro, Software Developer" />
-    <meta property="twitter:image" content="/images/Headshot.png" />
+    <meta property="twitter:image" content="https://portfolio-teal-ten-73.vercel.app/images/Headshot.png" />
 
     <link rel="apple-touch-icon" href="/images/Headshot.png" />
     <!--
@@ -58,3 +58,10 @@
     -->
   </body>
 </html>
+
+
+
+
+
+
+
